Script updates for BR of no olm install (#2394)
* add common-web-ui-config cm to labeling script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update for helm chart BR

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add nss

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add restore objects

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add labels to schedule resource

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add log line

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add nss restore yaml

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* name nss file

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* ensure nss labeling runs

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* ensure nss is covered properly

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* include csv created role and rolebinding for nss

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* correct label for cs operator cluster rbac

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* remove excessive labeling

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* label operandrequest crd

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add in image list configmap from edb

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* include extra configmap

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* split ns chart restore files

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change name of im restore file

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add odlm file

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update script to use correct edb deployment name

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* label fifth and final odlm crd

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update for zen chart inclusion

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update zen br script for changes to minio

Signed

--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -45,3 +45,16 @@ spec:
         - keycloak #velero plugin approach to BR keycloak data
         - user-mgmt #non-data user-management operator resources
         - nss
+        - cs-chart
+        - cs-cluster
+        - odlm-chart
+        - odlm-cluster
+        - ui-chart
+        - ui-cluster
+        - zen-chart
+        - zen-cluster
+        - edb-chart
+        - edb-cluster
+        - iam-chart
+        - iam-cluster
+        - nss-cluster
