added cpfs specific imagePullPrefix, use global if empty
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -39,7 +39,7 @@ spec:
                       - s390x
       containers:         
         - name: ibm-common-service-operator
-          image: {{ .Values.global.imagePullPrefix}}/{{ .Values.cpfs.imageRegistryNamespaceOperator}}/common-service-operator:4.12.0
+          image: {{ .Values.cpfs.imagePullPrefix | default .Values.global.imagePullPrefix }}/{{ .Values.cpfs.imageRegistryNamespaceOperator}}/common-service-operator:4.12.0
           command: 
             - /manager
           env:             
