--- a/helm-cluster-scoped/templates/cluster-rbac.yaml
+++ b/helm-cluster-scoped/templates/cluster-rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata: 
-  name: ibm-common-service-operator
+  name: ibm-common-service-operator-{{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
 rules:   
@@ -82,13 +82,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata: 
-  name: ibm-common-service-operator
+  name: ibm-common-service-operator-{{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
 roleRef: 
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
-  name: ibm-common-service-operator
+  name: ibm-common-service-operator-{{ .Values.global.operatorNamespace }}
 subjects:   
   - kind: ServiceAccount
     name: ibm-common-service-operator
