--- a/helm-cluster-scoped/values.yaml
+++ b/helm-cluster-scoped/values.yaml
@@ -3,10 +3,6 @@ cpfs:
   imageRegistryNamespaceOperator: cpopen
   imageRegistryNamespaceOperand: cpopen/cpfs
 
-#Commented out values are covered by a global values file
-# imagePullPrefix: icr.io
-# imagePullSecret: ibm-entitlement-key
-# other configuration you think you might need for your operator
-# following are examples, not required:
-# operatorNamespace: ""
-# servicesNamespace: ""
+global:
+  operatorNamespace: operator-ns
+
