updated helm chart to remove NSS dependency
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -48,11 +48,13 @@ spec:
                 fieldRef: 
                   apiVersion: v1
                   fieldPath: metadata.namespace
+          {{- $watchNamespaces := .Values.global.tetheredNamespaces | default list -}}
+          {{- if .Values.global.instanceNamespace -}}
+          {{- $watchNamespaces = append $watchNamespaces .Values.global.instanceNamespace -}}
+          {{- end -}}
+          {{- $watchNamespaces = prepend $watchNamespaces .Values.global.operatorNamespace }}
             - name: WATCH_NAMESPACE
-              valueFrom:
-                configMapKeyRef:
-                  key: namespaces
-                  name: namespace-scope
+              value: {{ uniq $watchNamespaces | join "," | quote }}
             - name: NO_OLM
               value: "true"
             - name: ENABLE_WEBHOOKS
