added new labels variable to values for generically configuring any labels
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,6 +2,7 @@
 cpfs:
   imageRegistryNamespaceOperator: cpopen
   imageRegistryNamespaceOperand: cpopen/cpfs
+  labels:
 
 # Commented out values are handled by a global values file
 # imagePullPrefix: icr.io
