--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
     component-id: {{ .Chart.Name }}
     foundationservices.cloudpak.ibm.com: commonservice
+    {{- with .Values.cpfs.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   license:
     accept: {{ .Values.global.licenseAccept }}
