--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: {{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
+    {{- with .Values.cpfs.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 
 {{- $chartName := .Chart.Name }}
 {{- $operaterNamespace := .Values.global.operatorNamespace }}
@@ -14,6 +17,7 @@ metadata:
 {{- if .Values.global.instanceNamespace }}
   {{- $namespaces = append $namespaces .Values.global.instanceNamespace }}
 {{- end }}
+{{- $labels := .Values.cpfs.labels }}
 {{- range $i := $namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -23,6 +27,9 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
+    {{- with $labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 roleRef: 
   kind: Role
   apiGroup: rbac.authorization.k8s.io
@@ -40,6 +47,9 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
+    {{- with $labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 rules:   
   - apiGroups: 
       - ""
