--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -23,7 +23,6 @@ spec:
         app.kubernetes.io/managed-by: ibm-common-service-operator
         app.kubernetes.io/name: ibm-common-service-operator
         name: ibm-common-service-operator
-        intent: projected
         productName: IBM_Cloud_Platform_Common_Services
     spec: 
       affinity: 
@@ -48,11 +47,13 @@ spec:
                 fieldRef: 
                   apiVersion: v1
                   fieldPath: metadata.namespace
+          {{- $watchNamespaces := .Values.global.tetheredNamespaces | default list -}}
+          {{- if .Values.global.instanceNamespace -}}
+          {{- $watchNamespaces = append $watchNamespaces .Values.global.instanceNamespace -}}
+          {{- end -}}
+          {{- $watchNamespaces = prepend $watchNamespaces .Values.global.operatorNamespace }}
             - name: WATCH_NAMESPACE
-              valueFrom:
-                configMapKeyRef:
-                  key: namespaces
-                  name: namespace-scope
+              value: {{ uniq $watchNamespaces | join "," | quote }}
             - name: NO_OLM
               value: "true"
             - name: ENABLE_WEBHOOKS
