--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -455,6 +455,7 @@ spec:
                 - get
                 - list
                 - watch
+                - update
             - apiGroups:
                 - apps
               resources:
