update default namespace based on changes to underlying script
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env.properties
+++ b/br-testing-automation/env.properties
@@ -4,8 +4,8 @@ CS_CATALOG_SOURCE="opencloud-operators"
 CAT_SRC_NS="openshift-marketplace" #default
 OC="oc" #default, can be overridden with --oc option when calling script
 YQ="yq" #default, can be overridden with --yq option when calling script
-SF_NAMESPACE="ibm-spectrum-fusion-ns" #default
-BR_SERVICE_NAMESPACE="ibm-backup-restore" #default
+SF_NAMESPACE="ibm-fusion" #default
+BR_SERVICE_NAMESPACE="ibm-bnr" #default
 GITHUB_USER= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
 GITHUB_TOKEN= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
 STORAGE_CLASS=""
@@ -56,6 +56,6 @@ TARGET_CLUSTER=""  # cluster name
 TARGET_CLUSTER_TYPE="" # either 'spoke' or 'hub'
 APPLICATION="cs-application" 
 BACKUP_POLICY="cs-backup-policy"
-SF_NAMESPACE="ibm-spectrum-fusion-ns"
+SF_NAMESPACE="ibm-fusion"
 BACKUP_NAME="" # if --backup is enabled, this is necessary
 RESTORE_NAME="" # if --restore is enabled, this is necessary
