--- a/velero/spectrum-fusion/application.yaml
+++ b/velero/spectrum-fusion/application.yaml
@@ -2,7 +2,7 @@ apiVersion: application.isf.ibm.com/v1alpha1
 kind: Application
 metadata:
   name: cs-application
-  namespace: ibm-spectrum-fusion-ns
+  namespace: <spectrum fusion ns>
 spec:
   enableDR: false
   includedNamespaces:
