--- a/velero/spectrum-fusion/policy_assignment.yaml
+++ b/velero/spectrum-fusion/policy_assignment.yaml
@@ -2,7 +2,7 @@ apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: PolicyAssignment
 metadata:
   name: cs-policy-assignment
-  namespace: ibm-spectrum-fusion-ns
+  namespace: <spectrum fusion ns>
 spec:
   application: cs-application
   backupPolicy: cs-backup-policy
@@ -10,4 +10,4 @@ spec:
   recipe:
     apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
     name: cs-recipe
-    namespace: ibm-spectrum-fusion-ns
+    namespace: <spectrum fusion ns>
