default sf namespace changed, change examples to require specifying namespace
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
@@ -2,7 +2,7 @@ apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
 kind: Recipe
 metadata:
   name: cs-recipe
-  namespace: ibm-spectrum-fusion-ns
+  namespace: <spectrum fusion ns>
 spec:
   appType: common-service
   groups:
