combine lsr and lsr charts restore resources
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/restore/restore-lsr.yaml
+++ b/velero/restore/restore-lsr.yaml
@@ -15,6 +15,11 @@ spec:
   hooks: {}
   includedNamespaces:
   - '*'
-  labelSelector:
-    matchLabels:
-      foundationservices.cloudpak.ibm.com: lsr
+  orLabelSelectors:
+  - matchExpressions:
+    - key: foundationservices.cloudpak.ibm.com
+      operator: In
+      values:
+      - lsr-cluster
+      - lsr-chart
+      - lsr
