debug br script
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/schedule/license_service_reporter/lsr-br-scripts-cm.yaml
+++ b/velero/schedule/license_service_reporter/lsr-br-scripts-cm.yaml
@@ -32,7 +32,7 @@ data:
             info "Mode set to backup, beginning backup process."
             backup
             success "Backup completed successfully."
-        else if [[ $MODE == "restore" ]]
+        elif [[ $MODE == "restore" ]]; then
             info "Mode is set to restore, beginning restore process."
             restore
             success "Restore completed successfully."
