--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -383,7 +383,7 @@ spec:
                             fieldPath: metadata.annotations['olm.targetNamespaces']
                       - name: OPERATOR_NAME
                         value: ibm-common-service-operator
-                      - name: UTILS_IMAGE
+                      - name: CPFS_UTILS_IMAGE
                         value: icr.io/cpopen/cpfs/cpfs-utils:latest
                     image: icr.io/cpopen/common-service-operator:4.12.0
                     imagePullPolicy: IfNotPresent
@@ -679,3 +679,5 @@ spec:
   relatedImages:
     - image: icr.io/cpopen/common-service-operator:4.12.0
       name: COMMON_SERVICE_OPERATOR_IMAGE
+    - image: icr.io/cpopen/cpfs/cpfs-utils:latest
+      name: CPFS_UTILS_IMAGE
