--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -74,7 +74,7 @@ spec:
               fieldPath: metadata.annotations['olm.targetNamespaces']
         - name: OPERATOR_NAME
           value: "ibm-common-service-operator"
-        - name: UTILS_IMAGE
+        - name: CPFS_UTILS_IMAGE
           value: icr.io/cpopen/cpfs/cpfs-utils:latest
         resources:
           limits:
