--- a/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
@@ -269,4 +269,6 @@ spec:
   relatedImages:
   - image: icr.io/cpopen/common-service-operator:4.12.0
     name: COMMON_SERVICE_OPERATOR_IMAGE
+  - image: icr.io/cpopen/cpfs/cpfs-utils:latest
+    name: CPFS_UTILS_IMAGE
   version: 0.0.0
