Add must gather image in relatedImage for Catalog based mirroring
Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -686,3 +686,5 @@ spec:
       name: COMMON_SERVICE_OPERATOR_IMAGE
     - image: icr.io/cpopen/cpfs/cpfs-utils:latest
       name: CPFS_UTILS_IMAGE
+    - image: icr.io/cpopen/cpfs/must-gather:latest
+      name: MUST_GATHER_IMAGE
