Add cpfs-oadp-plugins images into relatedImages for catalog based mirroring
Signed-off-by: Daniel Fan <yuchen.fan@ibm.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -683,3 +683,5 @@ spec:
       name: CPFS_UTILS_IMAGE
     - image: icr.io/cpopen/cpfs/must-gather:latest
       name: MUST_GATHER_IMAGE
+    - image: icr.io/cpopen/cpfs/cpfs-oadp-plugins:4.12.0
+      name: CPFS_OADP_PLUGINS_IMAGE
