--- a/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
@@ -273,4 +273,6 @@ spec:
     name: CPFS_UTILS_IMAGE
   - image: icr.io/cpopen/cpfs/must-gather:latest
     name: MUST_GATHER_IMAGE
+  - image: icr.io/cpopen/cpfs/cpfs-oadp-plugins:4.12.0
+    name: CPFS_OADP_PLUGINS_IMAGE
   version: 0.0.0
