--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -681,3 +681,7 @@ spec:
       name: COMMON_SERVICE_OPERATOR_IMAGE
     - image: icr.io/cpopen/cpfs/cpfs-utils:latest
       name: CPFS_UTILS_IMAGE
+    - image: icr.io/cpopen/cpfs/must-gather:latest
+      name: MUST_GATHER_IMAGE
+    - image: icr.io/cpopen/cpfs/cpfs-oadp-plugins:4.12.0
+      name: CPFS_OADP_PLUGINS_IMAGE
