--- a/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
@@ -271,4 +271,8 @@ spec:
     name: COMMON_SERVICE_OPERATOR_IMAGE
   - image: icr.io/cpopen/cpfs/cpfs-utils:latest
     name: CPFS_UTILS_IMAGE
+  - image: icr.io/cpopen/cpfs/must-gather:latest
+    name: MUST_GATHER_IMAGE
+  - image: icr.io/cpopen/cpfs/cpfs-oadp-plugins:4.12.0
+    name: CPFS_OADP_PLUGINS_IMAGE
   version: 0.0.0
