shorten licensing label
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/restore/no-olm/restore-licensing-charts.yaml
+++ b/velero/restore/no-olm/restore-licensing-charts.yaml
@@ -22,5 +22,5 @@ spec:
     - key: foundationservices.cloudpak.ibm.com
       operator: In
       values:
-      - licensing-cluster
-      - licensing-chart
+      - ls-cluster
+      - ls-chart
