reduce number of restores by combining licensing chart and cm restore
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/restore/restore-licensing.yaml
+++ b/velero/restore/restore-licensing.yaml
@@ -15,6 +15,11 @@ spec:
   hooks: {}
   includedNamespaces:
   - '*'
-  labelSelector:
-    matchLabels:
-      foundationservices.cloudpak.ibm.com: licensing
+  orLabelSelectors:
+  - matchExpressions:
+    - key: foundationservices.cloudpak.ibm.com
+      operator: In
+      values:
+      - ls-cluster
+      - ls-chart
+      - licensing
