use annotation to create cs cr
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,6 +3,7 @@ cpfs:
   imageRegistryNamespaceOperator: cpopen
   imageRegistryNamespaceOperand: cpopen/cpfs
   labels:
+    test: test
 
 # Commented out values are handled by a global values file
 # imagePullPrefix: icr.io
