--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -19,7 +19,7 @@ metadata:
               "component-id": "{{ .Chart.Name }}",
               "foundationservices.cloudpak.ibm.com": "commonservice",
               {{- range $key, $val := .Values.cpfs.labels }}
-              {{ $key }}: {{ $val }}
+              "{{ $key }}": "{{ $val }}"
               {{- end}}
             },
             "annotations": {
@@ -30,7 +30,7 @@ metadata:
           },
           "spec": {
             "license": {
-              "accept": "{{ .Values.global.licenseAccept }}"
+              "accept": {{ .Values.global.licenseAccept }}
             },
             "operatorNamespace": "{{ .Values.global.operatorNamespace }}",
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
@@ -94,7 +94,7 @@ spec:
               value: "false"
             - name: OPERATOR_NAME
               value: ibm-common-service-operator
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           livenessProbe: 
             failureThreshold: 10
             httpGet: 
