revert the change in deployment
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -94,7 +94,7 @@ spec:
               value: "false"
             - name: OPERATOR_NAME
               value: ibm-common-service-operator
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           livenessProbe: 
             failureThreshold: 10
             httpGet: 
