--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -58,3 +58,7 @@ spec:
         - iam-chart
         - iam-cluster
         - nss-cluster
+        - licensing-cluster
+        - licensing-chart
+        - lsr-cluster
+        - lsr-chart
