remove last , in commonservice label
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -17,8 +17,9 @@ metadata:
           "metadata": {
             "labels": {
               "component-id": "{{ .Chart.Name }}",
-              "foundationservices.cloudpak.ibm.com": "commonservice",
+              "foundationservices.cloudpak.ibm.com": "commonservice"
               {{- range $key, $val := .Values.cpfs.labels }}
+              ,
               "{{ $key }}": "{{ $val }}"
               {{- end}}
             },
